@@ -44,7 +44,6 @@ import java.util.Set;
 
 import org.olat.core.logging.LogDelegator;
 import org.olat.core.logging.OLATRuntimeException;
-import org.olat.core.util.FileUtils;
 import org.olat.core.util.StringHelper;
 import org.olat.modules.scorm.manager.ScormManager;
 import org.olat.modules.scorm.server.beans.LMSDataFormBean;
@@ -63,10 +62,9 @@ import ch.ethz.pfplms.scorm.api.ApiAdapter;
  * @author guido
  */
 public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm.api.ApiAdapterInterface {
-	private final	ApiAdapter core; 
-	//private ScormTrackingManager scormTracking;
-	
-	private Hashtable<String,String> olatScoCmi = new Hashtable<String,String>();
+	private final ApiAdapter core; 
+
+	private Hashtable<String,String> olatScoCmi = new Hashtable<>();
 
 	private String  olatStudentId;
 	private String  olatStudentName;
@@ -81,7 +79,7 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 	private LMSDataHandler odatahandler;
 	private ScormManager scormManager;
 	private SettingsHandlerImpl scormSettingsHandler;
-	private final List<ScormAPICallback> apiCallbacks = new ArrayList<ScormAPICallback>(2);
+	private final List<ScormAPICallback> apiCallbacks = new ArrayList<>(2);
 	// 
 	private Properties scoresProp; // keys: sahsId; values = raw score of an sco
 	private Properties lessonStatusProp;
@@ -126,30 +124,20 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 		scorePropsFile = new File(savePath, "_olat_score.properties");
 		scoresProp = new Properties();
 		if (scorePropsFile.exists()) {
-			InputStream is = null;
-			try {
-				is = new BufferedInputStream(new FileInputStream(scorePropsFile));
+			try(InputStream is = new BufferedInputStream(new FileInputStream(scorePropsFile))) {
 				scoresProp.load(is);
 			} catch (IOException e) {
 				throw e;
-			}
-			finally {
-				if (is != null) FileUtils.closeSafely(is);
 			}
 		}
 		
 		lessonStatusPropsFile = new File(savePath, "_olat_lesson_status.properties");
 		lessonStatusProp = new Properties();
 		if (lessonStatusPropsFile.exists()) {
-			InputStream is = null;
-			try {
-				is = new BufferedInputStream(new FileInputStream(lessonStatusPropsFile));
+			try(InputStream is = new BufferedInputStream(new FileInputStream(lessonStatusPropsFile))) {
 				lessonStatusProp.load(is);
 			} catch (IOException e) {
 				throw e;
-			}
-			finally {
-				if (is != null) FileUtils.closeSafely(is);
 			}
 		}
 		
@@ -274,12 +262,10 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 		
 		LMSDataFormBean lmsDataBean = new LMSDataFormBean();
 		lmsDataBean.setItemID(olatScoId);
-		//TODO:gs pass the dataBean for use, and do not get it a second time
 		lmsDataBean.setNextAction("5");
 		lmsDataBean.setLmsAction("update");
-		Map <String,String>cmiData = new HashMap<String,String>();
+		Map <String,String>cmiData = new HashMap<>();
 		
-		//TODO:gs:c make it possible only to update the changed cmi data.
 		if (ins.size() > 0){
 			Set <String> set = ins.keySet();
 			for(Iterator<String> it = set.iterator();it.hasNext();){
@@ -320,29 +306,19 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 				synchronized(this) { //o_clusterOK by:fj: instance is spawned by the ScormAPIandDisplayController
 					if(StringHelper.containsNonWhitespace(rawScore)) {
 						scoresProp.put(olatScoId, rawScore);
-						OutputStream os = null;
-						try {
-							os = new BufferedOutputStream(new FileOutputStream(scorePropsFile));
+						try(OutputStream os = new BufferedOutputStream(new FileOutputStream(scorePropsFile))) {
 							scoresProp.store(os, null);
 						} catch (IOException e) {
 							throw new OLATRuntimeException(this.getClass(), "could not save scorm-properties-file: "+scorePropsFile.getAbsolutePath(), e);
-						}
-						finally {
-							FileUtils.closeSafely(os);
 						}
 					}
 
 					if(StringHelper.containsNonWhitespace(lessonStatus)) {
 						lessonStatusProp.put(olatScoId, lessonStatus);
-						OutputStream os = null;
-						try {
-							os = new BufferedOutputStream(new FileOutputStream(lessonStatusPropsFile));
+						try(OutputStream os = new BufferedOutputStream(new FileOutputStream(lessonStatusPropsFile))) {
 							lessonStatusProp.store(os, null);
 						} catch (IOException e) {
 							throw new OLATRuntimeException(this.getClass(), "could not save scorm-properties-file: "+scorePropsFile.getAbsolutePath(), e);
-						}
-						finally {
-							FileUtils.closeSafely(os);
 						}
 					}
 					// notify
@@ -421,7 +397,6 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 	 * @return true if the item is completed
 	 */
 	public boolean isItemCompleted(String itemId){
-		//TODO:gs make method faster by caching lmsBean, but when to set out of date?
 		LMSDataFormBean lmsDataBean = new LMSDataFormBean();
 		lmsDataBean.setItemID(itemId);
 		lmsDataBean.setLmsAction("get");
@@ -435,7 +410,6 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 	 * @return true if item has any not fullfilled preconditions
 	 */
 	public boolean hasItemPrerequisites(String itemId) {
-		//TODO:gs make method faster by caching lmsBean, but when to set out of date?
 		LMSDataFormBean lmsDataBean = new LMSDataFormBean();
 		lmsDataBean.setItemID(itemId);
 		lmsDataBean.setLmsAction("get");
@@ -453,7 +427,7 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 		odatahandler = new LMSDataHandler(scormManager, lmsDataBean, scormSettingsHandler);
 		LMSResultsBean lmsBean = odatahandler.getResultsBean();
 		String[][] preReqTbl = lmsBean.getPreReqTable();
-		Map <String,String>itemsStatus = new HashMap<String,String>();
+		Map <String,String>itemsStatus = new HashMap<>();
 		//put table into map 
 		for(int i=0; i < preReqTbl.length; i++){
 			if(preReqTbl[i][1].equals("not attempted")) preReqTbl[i][1] ="not_attempted";
@@ -467,7 +441,6 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 	 * @return the previos Sco itemId
 	 */
 	public Integer getPreviousSco(String recentId) {
-		//		TODO:gs make method faster by caching lmsBean, but when to set out of date?
 		LMSDataFormBean lmsDataBean = new LMSDataFormBean();
 		lmsDataBean.setItemID(recentId);
 		lmsDataBean.setLmsAction("get");
@@ -481,7 +454,7 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 				break;
 			}
 		}
-		return new Integer(previousNavScoId);
+		return Integer.valueOf(previousNavScoId);
 	}
 
 	/**
@@ -489,7 +462,6 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 	 * @return the next Sco itemId
 	 */
 	public Integer getNextSco(String recentId) {
-		//		TODO:gs make method faster by chaching lmsBean, but when to set out of date?
 		LMSDataFormBean lmsDataBean = new LMSDataFormBean();
 		lmsDataBean.setItemID(recentId);
 		lmsDataBean.setLmsAction("get");
@@ -503,7 +475,7 @@ public	class OLATApiAdapter extends LogDelegator implements ch.ethz.pfplms.scorm
 				break;
 			}
 		}
-		return new Integer(nextNavScoId);
+		return Integer.valueOf(nextNavScoId);
 	}
 	
 	/****************************************************************************************
